--- a/index.css
+++ b/index.css
@@ -4,9 +4,9 @@
   justify-content: space-between;
   flex-direction: row;
   padding: 1em;
-  width: 80%;
-  margin-left: 10%;
+  width: 100%;
   height: 100%;
+  background-color: white;
 }
 
 /* Name input specific styling */
@@ -109,7 +109,7 @@
 #action-modal-container select {
   width: 100px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 /* styling for checkboxes */
