--- a/prefixedCSS.css
+++ b/prefixedCSS.css
@@ -12,9 +12,9 @@
   -ms-flex-direction: row;
   flex-direction: row;
   padding: 1em;
-  width: 80%;
-  margin-left: 10%;
+  width: 100%;
   height: 100%;
+  background-color: white;
 }
 
 
@@ -111,6 +111,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  text-align: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
@@ -166,9 +167,10 @@
 
 /* styling for save button */
 
-#save {
+
+/* #save {
   margin-top: 30px;
-}
+} */
 
 
 /* styling for select elements */
@@ -176,7 +178,7 @@
 #action-modal-container select {
   width: 100px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 
